[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "send-to-influx"
version = "5.0"
description = "Collect smart-home and energy device metrics into InfluxDB, with an optional MCP server to query and control them through Claude"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/L337-org/send-to-influx"

[project.scripts]
send-to-influx = "sendtoinflux:main"
send-to-influx-set-credential = "toinflux.credential_cli:main"

[tool.setuptools]
py-modules = ["sendtoinflux"]

[tool.setuptools.packages.find]
include = ["toinflux*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--capture=sys"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false